# Py10Web

./: .gitignore  readme.md
client_rest/: index.html  main.html
client_rest/javascript/: app.js  main.js
m01_01/D/: finish.py
m01_01/I/: finish.py
m01_01/L/: aggregation.py  composition.py  finish.py
m01_01/O/: finish.py
m01_01/S/: finish.py
m01_02/: test.py
m02_01/app_example/: application.logs  example_01.py  example_02.py  example_03.py  logger.py  main.py  pyproject.toml
m02_01/awesome_project/: pyproject.toml
m02_01/test_app/: main.py  pyproject.toml
m10_03_01/: 02_thread_like_class.py  06_event_thread.py  07_event_stop.py  09_condition_thread.py  12_barrier_thread.py
m10_03_01/file/: main.py
m10_03_01/task_runner/: main.py
m10_03_02/: 03_process__join.py  04_process_lock_value_array.py  09_semaphore_manager.py  11_callback.py  12_pool.py
m10_03_02/file_sort/: main.py  main_map.py
m10_03_02/task_runner/: main.js  main.py
m10_04_01/: 404.html  blog.html  index.html  server.py  simple_server.py  test.html
m10_04_02/: Dockerfile  client_socket.py  contact.html  pyproject.toml  server.py  server_socket.py
m10_04_02/storage/: blog.json
m10_04_02/templates/: blog.html
m10_05_01/: 01_intro.py  02_gather.py  03_create_task.py  04_forever_loop.py  05_future.py  06_bound_ops.py  07_cpu_bound.py  08_io_bound.py  pyproject.toml
m10_05_02/: 01_async_for.py  02_async_for.py  03_async_for.py  04_async_queue.py  05_wait.py  06_aiohttp_client.py  pyproject.toml
m10_05_02/chat/: index.html  server.py
m10_05_02/sort-files/: main.py
m10_05_02/task-runner/: main.js  task_runner.py
m10_06_01/: create_table.sql  demo_db.sqlite  main.py  ops.sql  readme.md
m10_06_02/: Script-create_table.sql  Script-select-hw.sql  connection.py  create_table.py  hw6_for_10g.sqlite  insert_to_db.py  migration.py  pyproject.toml  seeds.py  select_from_db.py  update_to_db.py
m10_07_01/: config.ini  example_core.py  example_session.py  example_session_async.py  example_session_new.py  main.py  pyproject.toml  readme.md  registration.py
m10_07_01/database/: db.py  models.py  repository.py
m10_07_02/: config.ini  main.py  pyproject.toml
m10_07_02/database/: models.py
m10_07_02/migrations/versions/: 077c02979c65_init.py  22463e7b59cf_add_contacts.py
m10_07_02/seeds/: contacts.py  init.py
m10_08_01/: data.json  pyproject.toml  readme.md
m10_08_01/odm_mongoengine/: create.py  models.py  read.py  remove.py  update.py
m10_08_01/pymongo/: app.py  connect.py
m10_08_02/: pyproject.toml
m10_08_02/01_hello_world/: consumer.py  producer.py
m10_08_02/02_tasks/: consumer.py  producer.py
m10_08_02/03_pub_sub/: consumer.py  producer.py
m10_08_02/04_celery/: app.py
m10_08_02/redis_example/: cache.py  main.py
m10_09_01/: enemy.json  main.py  pyproject.toml
m10_09_01/war_info/: losses.json  urls.json
m10_09_01/war_info/war_info/: middlewares.py  pipelines.py  settings.py
m10_09_01/war_info/war_info/spiders/: get_losses.py  get_urls.py
m10_09_02/: authors.json  main.py  pyproject.toml  quotes.json  spider.py  spider_selenium.py
m10_10_02/project_instagram/: manage.py
m10_11_01/: db.py  main.py  models.py  pyproject.toml  sql_app.db
m10_11_02/: main.py  pyproject.toml
m10_11_02/migrations/: env.py
m10_11_02/src/: schemas.py
m10_11_02/src/conf/: config.ini
m10_11_02/src/database/: models.py
m10_11_02/src/repository/: cats.py
m10_11_02/src/routes/: cats.py  owners.py
m10_11_02/templates/: index.html
m10_12_01/: main.py  pyproject.toml
m10_12_01/base/: app.py  auth.py  sql_app.db
m10_12_01/from_docs/: app.py  auth.py  sql_app.db
m10_12_01/refresh_token/: app.py  auth.py  sql_app.db
m10_12_02/: main.py  pyproject.toml
m10_12_02/src/: schemas.py
m10_12_02/templates/: index.html
m10_13_01/: docker-compose.yml  pyproject.toml
m10_13_01/src/: schemas.py
m10_13_01_django/: .dockerignore  Dockerfile  pyproject.toml
m10_13_01_django/project_instagram/app_instagram/: forms.py  models.py
m10_13_01_django/project_instagram/app_instagram/templates/app_instagram/: pictures.html
m10_13_01_django/project_instagram/project_instagram/: settings.py  urls.py
m10_13_01_django/project_instagram/users/: forms.py  urls.py  views.py
m10_13_01_django/project_instagram/users/templates/users/: password_reset.html  password_reset_complete.html  password_reset_confirm.html  password_reset_done.html  signin.html  signup.html
m10_13_02/: main.py  pyproject.toml  readme.md  test.py
m10_14_01/rest_api_10/: .coverage  .env.example  docker-compose.yml  main.py  pyproject.toml  readme.md  test.db
m10_14_01/rest_api_10/docs/: conf.py  index.rst
m10_14_01/rest_api_10/docs/_build/doctrees/: environment.pickle  index.doctree
m10_14_01/rest_api_10/docs/_build/html/: .buildinfo  genindex.html  index.html  objects.inv  py-modindex.html  search.html  searchindex.js
m10_14_01/rest_api_10/migrations/versions/: 6b095d859c92_add_user_s_roles.py
m10_14_01/rest_api_10/postgres-data/base/13458/: pg_internal.init
m10_14_01/rest_api_10/postgres-data/base/16384/: 16392  16398  16403  16412  16420  16421  16429  2579  2620  2656  2658  2659  2662  2663  2667  2678  2679  2703  2704  3455  5002  pg_internal.init
m10_14_01/rest_api_10/postgres-data/global/: 2671  pg_control  pg_internal.init
m10_14_01/rest_api_10/postgres-data/pg_stat_tmp/: db_0.stat  db_13458.stat  db_16384.stat  global.stat
m10_14_01/rest_api_10/src/: schemas.py
m10_14_01/rest_api_10/src/database/: db.py  models.py
m10_14_01/rest_api_10/src/repository/: cats.py  test_unit_cats.py  users.py
m10_14_01/rest_api_10/src/routes/: users.py
m10_14_01/rest_api_10/src/services/: auth.py  email.py  upload_avatar.py
m10_14_01/rest_api_10/templates/: test_form.html
m10_14_01/rest_api_10/tests/: conftest.py  test_main.py  test_route_auth.py  test_route_cats.py  test_unit_repository_owner.py
m10_hw_07/: config.ini  main.py  pyproject.toml  seeds.py
m10_hw_07/database/: db.py  models.py
m10_hw_07/migrations/: env.py
m10_hw_07/migrations/versions/: d58bbe435a5b_init.py
(+166 files in other folders)
