[tool.poetry]
name = "m10-05-02"
version = "0.1.0"
description = ""
authors = ["Yuriy Kuchma <krabatua@gmail.com>"]
readme = "README.md"
packages = [{include = "m10_05_02"}]

[tool.poetry.dependencies]
python = "^3.10"
faker = "^17.6.0"
requests = "^2.28.2"
aiohttp = "^3.8.4"
aiopath = "^0.6.11"
aioshutil = "^1.3"
websockets = "^10.4"
names = "^0.3.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
