[tool.poetry]
name = "m10-06-02"
version = "0.1.0"
description = ""
authors = ["Yuriy Kuchma <krabatua@gmail.com>"]
readme = "README.md"
packages = [{include = "m10_06_02"}]

[tool.poetry.dependencies]
python = "^3.10"
psycopg2 = "^2.9.5"
faker = "^18.3.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
