[tool.poetry]
name = "m10-09-02"
version = "0.1.0"
description = ""
authors = ["Yuriy Kuchma <krabatua@gmail.com>"]
readme = "README.md"
packages = [{include = "m10_09_02"}]

[tool.poetry.dependencies]
python = "^3.10"
scrapy = "^2.8.0"
scrapyscript = "^1.1.5"
selenium = "^4.8.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
