[tool.poetry]
name = "my-app"
version = "0.1.0"
description = "My testing application"
authors = ["Yuriy Kuchma <krabatua@gmail.com>"]
license = "MIT"
readme = "README.md"
packages = [{include = "my_app"}]

[tool.poetry.dependencies]
python = "3.10"
requests = "2.28.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
